fixed overflow of the channel list

--- a/front/src/style/Chat.css
+++ b/front/src/style/Chat.css
@@ -9,7 +9,7 @@
 	border: 5px solid var(--yellow-primary-color);
 	margin: auto;
 	border-radius: 40px;
-	height: 70%;
+	height: 100%;
 	max-height: 80%;
 	width: 70%;
 	background-color: lightgray;
@@ -20,13 +20,17 @@
 }
 
 .chat-page-left-side {
+	display: flex;
+	flex-direction: column;
 	min-width: 20%;
+	height: 100%;
 	text-align: center;
 	border-right: 2px solid black;
 	padding: 0.5rem;
 }
 
 .chat-page-left-side hr {
+	width: 100%;
 	border: 2.5px solid black;
 }
 
